# timetracker

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
ansible/: inventory  inventory.yml  playbook.yml
ansible/kimai2-debian10/: inventory  inventory.yml  playbook.yml
ansible/kimai2-debian10/roles/configure_nginx/files/: kimai2
ansible/kimai2-debian10/roles/configure_nginx/tasks/: main.yml
ansible/kimai2-debian10/roles/create_database/tasks/: main.yml
ansible/kimai2-debian10/roles/install_composer/files/: install_composer.sh
ansible/kimai2-debian10/roles/install_composer/tasks/: main.yml
ansible/kimai2-debian10/roles/install_kimai2/tasks/: main.yml
ansible/raspberry/: inventory.yml
ansible/raspberry/roles/code/tasks/: main.yml
ansible/raspberry/roles/common/files/: python3-fingerprint_1.5_all.deb
ansible/raspberry/roles/common/tasks/: main.yml
ansible/roles/code/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/cron/files/: check_internet1.sh
ansible/roles/cron/tasks/: main.yml
src/: FingerprintController.py  Kimai2Controller.py  Kimai2RestClient.py  ctes.py  graphic.py  kimai2_sync.py  logging.yml  models.py  requirements.txt  sqlite3.db  utils.py
src/test/: test_database.py
src/timetracker/: FingerprintController.py  Kimai2Controller.py  Kimai2RestClient.py  ctes.py  graphic.py  kimai2_sync.py  logging.yml  models.py  utils.py  wifi.c
src/timetracker/scripts/: create_database.py  delete_fingerprint_database.py
tests/: test_database.py  test_kimai2_api.py
(+8 files in other folders)
