[metadata]
name = timetracker-raspberry-pi-francisco-revilla
version = 0.0.1
author = Francisco Javier Revilla Linares
author_email = paconte@gmail.com
description = A fingerprint software to be run in a raspberry pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paconte/timetracker
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src